# token-world

./: .env.example  .gitignore  404.html  CLAUDE.md  LICENSE  MORNING-HANDOFF.md  README.md  codecov.yml  index.html  mkdocs.yml  prek.toml  pyproject.toml  sitemap.xml
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
.planning/: DECISIONS.md  GAP-ANALYSIS.md  GAP-HANDOFF.md  MILESTONES.md  OVERNIGHT-REPORT-20260414.md  OVERNIGHT-REPORT-20260415.md  OVERNIGHT-REPORT.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SESSION-6-REPORT.md  SESSION-7-REPORT.md  STATE.md  config.json
.planning/agent-prompts/: executor-preamble.md  yield-handler.md
.planning/backlog/: phase-03-gap-deferrals.md  v2.0-REQUIREMENTS.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  SDK-SESSIONS.md  STACK.md  SUMMARY.md  THEACT-PATTERNS.md
.planning/use-cases/: _README.md  _TEMPLATE.md
design/architecture/: index.html
design/composite-actions/: index.html
design/graph-conventions/: index.html
design/simulation-pipeline/: index.html
design/tooling-surfaces/: index.html
docs/: IdeationRant.txt  index.md
docs/design/: architecture.md  composite-actions.md  graph-conventions.md  simulation-pipeline.md  tooling-surfaces.md
docs/guides/: authoring-mechanics.md  claude-cli-backend.md  dashboard.md  getting-started.md  operator-cli.md  viz-graph.md
docs/quality/: dashboard-qa-checklist.md  sim-quality-rubric.md
guides/authoring-mechanics/: index.html
guides/claude-cli-backend/: index.html
guides/dashboard/: index.html
guides/getting-started/: index.html
guides/operator-cli/: index.html
guides/viz-graph/: index.html
quality/dashboard-qa-checklist/: index.html
quality/sim-quality-rubric/: index.html
scenarios/: example.yaml  willowbrook_bootstrap.yaml
scenarios/adversarial/: README.md  edge_case_stress.yaml  mixed_chaos.yaml  nonsense_barrage.yaml  repetition_loop.yaml  rule_violation.yaml
scripts/: annotate_use_case_outcomes.py  check_quality_thresholds.py  check_requirements_traceability.py  check_roadmap_progress.py  check_seed_mechanics.py  check_worktree_base.sh  check_wr03_tick_collision.py  ci_status.py  commit.sh  gsd_phase_files.py  inspect_playtest_report.py  migrate_tick_summaries.py  phase_show.py  phase_waves.py  probe_agent_sdk.py  run_uat.py  run_unattended.py  seed_starter_universe.py  uat_phase_03.py  update_prompt_hashes.py
search/: search_index.json
src/token_world/: __init__.py  cli.py  mcp_server.py  models.py
tests/: conftest.py  test_mcp_server.py  test_placeholder.py
tests/test_cli/: conftest.py  test_agents.py  test_diff.py  test_inspect.py  test_load_or_create_agent.py  test_mechanics.py  test_operator_commands.py  test_prune_diagnostics.py  test_quality.py  test_scaffold_mechanic.py  test_stats.py  test_tick.py  test_trace.py  test_validate_mechanic.py  test_viz_graph.py  test_watch.py  test_yields.py
tests/test_dashboard/: conftest.py  test_active_yield.py  test_agent_inspector.py  test_app_skeleton.py  test_causal_chain.py  test_graph_canvas.py  test_integration.py  test_mechanics_panel.py  test_property_history.py  test_quality_panel.py  test_run_status.py  test_side_effect_chain.py  test_stats_panel.py  test_tick_stream.py
tests/test_design_validation/: conftest.py  test_gap_analysis_schema.py  test_use_case_loader.py  test_use_case_schema.py
tests/test_engine/: conftest.py  (+26 more)
(+592 files in other folders)
