[project]
name = "token-world"
version = "0.1.0"
description = "Universe simulator where LLM-powered agents inhabit a text-based world with procedurally generated mechanics"
readme = "README.md"
license = "MIT"
authors = [{ name = "Reuben John", email = "reubenjohn@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.80",
    "click>=8.0",
    "networkx>=3.6",
    "pydantic>=2.12",
    "python-dotenv>=1.0",
    "loguru>=0.7",
]

[project.urls]
Homepage = "https://github.com/reubenjohn/token-world"
Repository = "https://github.com/reubenjohn/token-world"
Documentation = "https://reubenjohn.github.io/token-world/"
Issues = "https://github.com/reubenjohn/token-world/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/token_world"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["token_world"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
