[project]
name = "token-world"
version = "0.1.0"
description = "Universe simulator where LLM-powered agents inhabit a text-based world with procedurally generated mechanics"
readme = "README.md"
license = "MIT"
authors = [{ name = "Reuben John", email = "reubenjohn@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.80",
    "click>=8.0",
    "networkx>=3.6",
    "pydantic>=2.12",
    "python-dotenv>=1.0",
    "python-slugify>=8.0",
    "loguru>=0.7",
    "pyyaml>=6.0.3",
    "rtree>=1.4",
    "claude-agent-sdk>=0.1.58",
]

[project.scripts]
token-world = "token_world.cli:cli"
token-world-mcp = "token_world.mcp_server:main"

[project.urls]
Homepage = "https://github.com/reubenjohn/token-world"
Repository = "https://github.com/reubenjohn/token-world"
Documentation = "https://reubenjohn.github.io/token-world/"
Issues = "https://github.com/reubenjohn/token-world/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/token_world"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.15.10",
    "types-networkx>=3.6.1.20260408",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: Real-LLM integration test (requires Anthropic API key, costs money; excluded from default run)",
    "regression: use-case regression suite (DVAL-03); run with 'uv run pytest -m regression'",
]
addopts = "-m 'not integration and not regression'"

[tool.coverage.run]
source = ["token_world"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
